fix navbar collapse

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -949,12 +949,14 @@ border-radius: 100px;
         background: #fff;
         /* padding: 30px 0; */
         transition: .3s ease-in-out;
+        margin-top: 5px;
     }
     
     .navbar-collapse.show {
         background: #fff;
         /* padding: 30px 0; */
         transition: .3s ease-in-out;
+        margin-top: 5px;
     }
     .main .hero-section {
         margin: 100px 0;
